Fix 'c++ codegenerator creates uncompilable code'.

To fix initialize UmbrelloSettings attribute vectorClassName
with namespace (std::vector) and wrap attribute vectorClassNameInclude
with '<'...'>'.

BUG:377611
FIXED-IN:2.21.80 (KDE Applications 17.03.80)